svn HEAD
 Enhancements
 * Enabled video upload and download for Picasa.
 * Added reminders for Calendar via --reminder option.
 * Added --owner option to specify other accounts to interact with (e.g. Picasa collaborative albums).
 * Added list styles for contacts.
 * Allow docs edit task to create folders.
 * Included workaround for downloading new-version documents.
 * Added debug, verbose, and quiet flag options.

 Bugfixes
 * YouTube tasks can retrieve more than 50 results from queries.

version 0.9.8
 Enhancements
 * Authorization for Apps users occurs properly.
 * Docs upload can upload directories (Thanks, bartosh!)
 * setuptools support added for setup.py. (Thanks, dcolish!)
 * Calendar service supports multiple calendar operations.
 * More results are returned by queries, and control over number of results given to user with config file options.
 * Added --format as optional option to docs upload and download.
 * Added --folder as optional option to docs edit.
 * Behavior of --date option for calendar service improved.
 * Docs service can now download / edit spreadsheets. (Thanks, bartosh!)
 * Exceptions raised in interactive shell do not end shell session (Thanks, ferranb!)

 Bugfixes
 * Catches when user grants access with an account other than the one specified.
 * Uploads to folders in docs supported.
 * Gdata dependency added to setup.py.
 * Asking for help on a non-existant service cleanly and helpfully exits. (Thanks, ferranb!)
 * Errors encountered while uploading to Picasa are printed correctly rather than crashing. (Thanks, bartosh!)
 * Uploading files to Docs without extensions obeys --format or assumes an extension.
 * Uploading multiple files to Docs will name each file after its filename, rather than the first filename encountered.
 * Dependency on gdata is versioned to >= 1.2.4

version 0.9.7
 Enhancements:
 * Command history added to interactive mode (Thanks, aripollak!)