@@ -509,7 +509,8 @@ def setup_parser():
                     help='Google Apps Premier only - do not convert the file' +
                     ' on upload. (Else converts to native Google Docs format)')
   parser.add_option('-o', '--owner', dest='owner',
-                    help=('Username of the owner of the resource. For example,' +
+                    help=('Username or ID of the owner of the resource. ' +
+                          'For example,' +
                           " 'picasa list-albums -o bob' to list bob's albums"))
   parser.add_option('-q', '--query', dest='query',
                     help=('Full text query string for specifying items.'
